--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "localizacao-app",
+  "name": "wizard-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -13,18 +13,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~10.0.0",
+    "@angular/common": "^10.0.14",
     "@angular/core": "~10.0.0",
-    "@angular/forms": "~10.0.0",
+    "@angular/fire": "^6.1.5",
+    "@angular/forms": "^10.0.14",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "rxjs": "~6.5.5",
+    "@ionic/angular": "^5.9.4",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "firebase": "^8.1.1",
+    "localizacao-app": "file:",
+    "mysql": "^2.18.1",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
+    "wizard-app": "file:",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -34,9 +42,9 @@
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
     "@ionic/angular-toolkit": "^2.3.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.55",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
